--- a/Zhihu.Universal/Zhihu/View/Profile/ProfilePage.xaml
+++ b/Zhihu.Universal/Zhihu/View/Profile/ProfilePage.xaml
@@ -61,7 +61,14 @@
                 </Ellipse>
 
                 <StackPanel Grid.Row="0" Grid.Column="1" VerticalAlignment="Bottom">
-                    <TextBlock Margin="12 0 0 0" Text="{Binding Profile.Name}" FontSize="20" FontWeight="Bold" HorizontalAlignment="Left" Style="{StaticResource NoteTextStyle}"/>
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="12 0 0 0" Text="{Binding Profile.Name}" FontSize="20" FontWeight="Bold" HorizontalAlignment="Left" Style="{StaticResource NoteTextStyle}"/>
+                        <Image Margin="5 5 0 0" Width="20" VerticalAlignment="Center" Stretch="UniformToFill">
+                            <Image.Source>
+                                <Binding Path="Profile.Gender" Converter="{StaticResource GenderToImageConverter}"/>
+                            </Image.Source>
+                        </Image>
+                    </StackPanel>
                     <TextBlock Margin="12 0 0 6" Text="{Binding Profile.Headline}" FontSize="16" HorizontalAlignment="Left"
                                Visibility="{Binding Profile.Headline, Converter={StaticResource StringToVisibleConverter}}"
                                Style="{StaticResource NoteTextStyle}"/>
