--- a/Zhihu.Universal/Zhihu/View/Main/NotePage.xaml
+++ b/Zhihu.Universal/Zhihu/View/Main/NotePage.xaml
@@ -40,8 +40,8 @@
                     </Grid.RowDefinitions>
                     <interactivity:Interaction.Behaviors>
                         <core:EventTriggerBehavior EventName="Loaded">
-                            <core:InvokeCommandAction Command="{Binding Notify.HasReadFollows, Mode=OneWay}"/>
-                            <core:InvokeCommandAction Command="{Binding Notify.HasReadContents, Mode=OneWay}"/>
+                            <core:InvokeCommandAction Command="{Binding Notify.DismissFollowsNotify, Mode=OneWay}"/>
+                            <core:InvokeCommandAction Command="{Binding Notify.DismissContentsNotify, Mode=OneWay}"/>
                         </core:EventTriggerBehavior>
                     </interactivity:Interaction.Behaviors>
 
@@ -99,7 +99,7 @@
                                     <itemView:NotifyView>
                                         <interactivity:Interaction.Behaviors>
                                             <core:EventTriggerBehavior EventName="Tapped">
-                                                <core:InvokeCommandAction Command="{Binding Notify.HasReadContent}"
+                                                <core:InvokeCommandAction Command="{Binding Notify.DismissContentNotify}"
                                                                           CommandParameter="{Binding}"/>
                                             </core:EventTriggerBehavior>
                                         </interactivity:Interaction.Behaviors>
@@ -118,7 +118,7 @@
                     </Grid.RowDefinitions>
                     <interactivity:Interaction.Behaviors>
                         <core:EventTriggerBehavior EventName="Loaded">
-                            <core:InvokeCommandAction Command="{Binding Notify.HasReadLikes, Mode=OneWay}"/>
+                            <core:InvokeCommandAction Command="{Binding Notify.DismissLikesNotify, Mode=OneWay}"/>
                         </core:EventTriggerBehavior>
                     </interactivity:Interaction.Behaviors>
 
@@ -144,7 +144,7 @@
                                     <itemView:NotifyView>
                                         <interactivity:Interaction.Behaviors>
                                             <core:EventTriggerBehavior EventName="Tapped">
-                                                <core:InvokeCommandAction Command="{Binding Notify.HasReadLikes}"
+                                                <core:InvokeCommandAction Command="{Binding Notify.DismissContentNotify}"
                                                                                   CommandParameter="{Binding}"/>
                                             </core:EventTriggerBehavior>
                                         </interactivity:Interaction.Behaviors>
