add a background color to the save image button to make the button more visible when the image is white

--- a/Zhihu.Universal/Zhihu/Controls/ImageViewer.xaml
+++ b/Zhihu.Universal/Zhihu/Controls/ImageViewer.xaml
@@ -31,7 +31,7 @@
         </ScrollViewer>
 
         <Button x:Name="SaveButton" Margin="0 0 0 50" Height="60" Width="60" 
-                Foreground="White" FontSize="32"
+                Foreground="White" FontSize="32" Background="Black" Opacity=".6"
                 Content="&#xE105;" 
                 HorizontalAlignment="Center" VerticalAlignment="Bottom"
                 Style="{StaticResource BackButtonSmallStyle}">
