--- a/Zhihu.Universal/Zhihu/Resource/Generic.xaml
+++ b/Zhihu.Universal/Zhihu/Resource/Generic.xaml
@@ -143,7 +143,7 @@
                             <TextBlock FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" Text="下载失败，点击重试！" Foreground="{StaticResource SecondForeBrush}" />
                         </Border>
                        
-                        <ScrollViewer ZoomMode="{TemplateBinding ZoomMode}"
+                        <ScrollViewer ZoomMode="{TemplateBinding ZoomMode}" ManipulationMode="Scale"
                                       HorizontalAlignment="Stretch" 
                                       VerticalAlignment="Stretch"     
                                       HorizontalScrollBarVisibility="{TemplateBinding HorizontalScrollBarVisibility}" 
