--- a/Zhihu.Universal/Zhihu/View/Question/QuestionPage.xaml
+++ b/Zhihu.Universal/Zhihu/View/Question/QuestionPage.xaml
@@ -51,24 +51,10 @@
                            FontSize="{Binding Source={StaticResource ThemeHelper}, Path=Theme.FeedTitle}"/>
 
                 <!--Question Detial-->
-                <ItemsControl Margin="10 10 10 20" ItemsSource="{Binding Detail.Detail, Converter={StaticResource HtmlConverter}}">
-                    <ItemsControl.ItemTemplate>
-                        <DataTemplate>
-                            <RichTextBlock Margin="0 5 0 5" 
-                                           helper:ParagraphBuilder.Content="{Binding}"
-                                           LineHeight="{Binding Source={StaticResource ThemeHelper}, Path=Theme.FeedSummary, Converter={StaticResource LineHeightConverter}}"
-                                           FontSize="{Binding Source={StaticResource ThemeHelper}, Path=Theme.FeedSummary}"
-                                           IsTextSelectionEnabled="{Binding Source={StaticResource ThemeHelper}, Path=Theme.TextSelectionEnable}" 
-                                           Style="{StaticResource QuestionDetailStyle}"/>
-                        </DataTemplate>
-                    </ItemsControl.ItemTemplate>
-                    <ItemsControl.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <VirtualizingStackPanel/>
-                        </ItemsPanelTemplate>
-                    </ItemsControl.ItemsPanel>
-                </ItemsControl>
-
+                <controls:RichBlock Grid.Row="0" Margin="0 10 0 10"
+                                    HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  
+                                    Paragraphs="{Binding Detail.Detail, Converter={StaticResource HtmlConverter}, ConverterParameter='True'}" />
+               
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="*"/>
